--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
 <!--			<version>3.0.1</version>-->
 <!--		</dependency>-->
 	</dependencies>
+	<packaging>war</packaging>
 
 	<build>
 		<plugins>
